--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/chorus-options/templates/chorus-options-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/chorus-options/templates/chorus-options-template.html
@@ -1,6 +1,6 @@
 <div class="m-t-10 well pull-right m-b-10 p-t-10 p-b-10">
   <button type="button" id="question-done" class="btn btn-success btn-xs btn-sm">
-    <i class="fa fa-forward"></i> Next Question 
+    <i class="fa fa-forward"></i> Next
   </button>
 </div>
 
