editor textbox font weight fix

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -49,6 +49,7 @@
 	margin: 0 auto;
 	min-height: 500px !important;
 	padding: 15px 10px;
+	font-weight: normal;
 
 	li.ui-sortable-placeholder{
 		list-style: none;
