--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -173,6 +173,7 @@
   margin: 0 auto;
   min-height: 500px !important;
   padding: 15px 10px;
+  font-weight: normal;
 }
 #myCanvas li.ui-sortable-placeholder {
   list-style: none;
@@ -1788,6 +1789,9 @@ input#duration {
   margin-bottom: 2px;
   padding: 10px;
 }
+.quizWrong {
+  font-size: 25px;
+}
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
   width: 50%;
@@ -2047,6 +2051,9 @@ textarea {
 input[disabled].disabled {
   cursor: not-allowed;
   background-color: #e5e9ec;
+}
+ol > li {
+  line-height: 35px;
 }
 .checkbox label {
   font-size: 14px;
