--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -173,6 +173,7 @@
   margin: 0 auto;
   min-height: 500px !important;
   padding: 15px 10px;
+  font-weight: normal;
 }
 #myCanvas li.ui-sortable-placeholder {
   list-style: none;
