--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -163,6 +163,7 @@
 #site-page-content-region {
   margin-left: 240px;
   margin-right: 240px;
+  margin-bottom: 100px;
   overflow-x: auto;
 }
 #myCanvas {
@@ -1791,6 +1792,17 @@ input#duration {
 }
 .quizWrong {
   font-size: 25px;
+}
+.quizTimer {
+  margin: 0 auto 0;
+}
+.quizActions {
+  max-width: 760px;
+}
+.timerBox,
+.quizProgress {
+  width: 250px;
+  background: #ffffff;
 }
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
