--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -44,7 +44,7 @@
                         <div class="row">
                           <div class="col-sm-12  m-b-10 m-t-10">
                             <div class="">
-                              <button id="syncMediaStartContinue" type="button" class="btn btn-success h-center block"><span id="syncMediaButtonText" class="bold">Start</span></button>
+                              <button id="syncMediaStart" type="button" class="btn btn-success h-center block"><span id="syncMediaButtonText" class="bold">Start</span></button>
                               
                               <h5 id="syncMediaSuccess" class="m-t-5 semi-bold text-center text-success" style="display:none">Success</h5>
                               
