--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -39,5 +39,19 @@
 	background: @color-white;
 }
 
+.quizSteps{
+	ul{
+		list-style-type: none;
+		&:after{
+			clear: both;
+		}
+		li{
+			width: 33%;
+			float: left;
+			text-align: center;
+		}
+	}
+	
+}
 
 
