--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/chorus-options/templates/chorus-options-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/chorus-options/templates/chorus-options-template.html
@@ -15,7 +15,7 @@
               </div>
             </div>
 			 <div class="col-md-5 col-xs-5 no-padding">
-              <div class="tiles default active"><h5 class="bold text-white text-center no-margin p-t-30 p-b-35"><5%</h5>
+              <div class="tiles unselected active"><h5 class="bold text-white text-center no-margin p-t-30 p-b-35"><5%</h5>
               </div>
             </div>
         </div>
@@ -29,7 +29,7 @@
               </div>
             </div>
 			 <div class="col-md-5 col-xs-5 no-padding">
-              <div class="tiles default active">
+              <div class="tiles unselected active">
                 <h5 class="bold text-white text-center no-margin p-t-30 p-b-35">5-25%</h5>
               </div>
             </div>
@@ -44,7 +44,7 @@
               </div>
             </div>
 			 <div class="col-md-5 col-xs-5 no-padding">
-              <div class="tiles default active">
+              <div class="tiles unselected active">
                 <h5 class="bold text-white text-center no-margin p-t-30 p-b-35">25-50%</h5>
               </div>
             </div>
@@ -59,7 +59,7 @@
               </div>
             </div>
 			 <div class="col-md-5 col-xs-5 no-padding">
-              <div class="tiles default active">
+              <div class="tiles unselected active">
                    <h5 class="bold text-white text-center no-margin p-t-30 p-b-35">50-75%</h5>
               </div>
             </div>
@@ -74,7 +74,7 @@
               </div>
             </div>
 			 <div class="col-md-5 col-xs-5 no-padding">
-              <div class="tiles default active">
+              <div class="tiles unselected active">
                 <h5 class="bold text-white text-center no-margin p-t-30 p-b-35">75-100%</h5>
               </div>
             </div>
