filtering modules with status publish

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/group-details/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/group-details/templates/collection-details.html
@@ -84,8 +84,7 @@
             <div class="col-sm-4">
                 <label class="form-label">Status</label>
                 <select required name="status" id="status" class="form-control select2" >
-                    <option value="">--select status--</option>
-                    <option value="pending">Under Review</option>
+                    <option value="underreview">Under Review</option>
                     <option value="publish">Published</option>
                     <option value="archive">Archived</option>
                 </select>
