--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -1631,23 +1631,32 @@ h3.time {
 }
 .studentList .students .tiles.red,
 .studentList .students .tiles.default,
-.studentList .students .tiles.green {
+.studentList .students .tiles.green,
+.studentList .students .tiles.unselected,
+.studentList .students .tiles.blue {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 .studentList .students .tiles.red:active,
 .studentList .students .tiles.default:active,
-.studentList .students .tiles.green:active {
-  -webkit-transform: scale(1.15);
-  -moz-transform: scale(1.15);
-  transform: scale(1.15);
+.studentList .students .tiles.green:active,
+.studentList .students .tiles.unselected:active,
+.studentList .students .tiles.blue:active {
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  transform: scale(1.3);
+}
+.studentList .students .tiles.single.light {
+  opacity: 0.2;
+}
+.studentList .students .tiles.single.selected {
+  opacity: 1;
 }
 .studentList .students .tiles.single.selected .active {
-  background-color: #0090d9;
-  -webkit-transform: scale(1.15);
-  -moz-transform: scale(1.15);
-  transform: scale(1.15);
+  -webkit-transform: scale(1.3);
+  -moz-transform: scale(1.3);
+  transform: scale(1.3);
 }
 .studentList .students i {
   font-size: 20px;
@@ -1806,14 +1815,37 @@ input#duration {
 }
 .quizSteps ul {
   list-style-type: none;
+  padding: 0;
+  margin-bottom: 0;
 }
 .quizSteps ul:after {
   clear: both;
 }
 .quizSteps ul li {
-  width: 33%;
-  float: left;
   text-align: center;
+  padding: 0;
+}
+.quizSteps ul li a {
+  padding: 30px 0;
+  width: 33.3%;
+  float: left;
+  border: 1px solid #f3f3f3;
+  background: #e6e6e6;
+}
+.quizSteps ul li a:hover {
+  background: #f3f3f3;
+}
+.quizSteps ul li.right a {
+  background: #0aa699;
+  color: #ffffff;
+}
+.quizSteps ul li.wrong a {
+  background: #f35958;
+  color: #ffffff;
+}
+.quizSteps ul li.skip a {
+  background: #0090d9;
+  color: #ffffff;
 }
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
@@ -1989,6 +2021,7 @@ textarea.error,
 .page-content {
   min-height: 0;
   overflow-x: hidden;
+  padding-bottom: 80px;
 }
 .mainLogo {
   background-size: 80%;
