--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -246,6 +246,7 @@ textarea.error, .select2-choice.error {
 .page-content{
 	min-height: 0;
 	overflow-x: hidden;
+	padding-bottom: 80px;
 }
 
 .mainLogo{
