--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -42,13 +42,47 @@
 .quizSteps{
 	ul{
 		list-style-type: none;
+		padding: 0;
+		margin-bottom: 0;
 		&:after{
 			clear: both;
 		}
 		li{
-			width: 33%;
-			float: left;
 			text-align: center;
+			padding: 0;
+			a{
+				padding: 30px 0;
+				width: 33.3%;
+				float: left;
+				border: 1px solid @preview-grey;
+				background: darken(@preview-grey, 5%);
+				&:hover{
+					background: @preview-grey;
+				}
+			}
+			&.right{
+				a{
+					background: @color-success;
+					color: @color-white;
+				}
+			}
+			&.wrong{
+				a{
+					background: @color-danger;
+					color: @color-white;
+					// &:after{
+					// 	content: "\f04e";
+					// 	font-family: FontAwesome;
+					// 	display: inline-block;
+					// }
+				}
+			}
+			&.skip{
+				a{
+					background: @color-info;
+					color: @color-white;
+				}
+			}
 		}
 	}
 	
