--- a/HTML/assets/less/training.less
+++ b/HTML/assets/less/training.less
@@ -50,7 +50,11 @@ h3.time{
 				}
 
 			}
+			&.single.light{
+				opacity: 0.2;
+			}
 			&.single.selected{
+				opacity: 1;
 				.active{
 					//background-color: @color-info;
 					-webkit-transform: scale(1.3);
