--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1647,6 +1647,12 @@ h3.time {
   -moz-transform: scale(1.3);
   transform: scale(1.3);
 }
+.studentList .students .tiles.single.light {
+  opacity: 0.2;
+}
+.studentList .students .tiles.single.selected {
+  opacity: 1;
+}
 .studentList .students .tiles.single.selected .active {
   -webkit-transform: scale(1.3);
   -moz-transform: scale(1.3);
@@ -1809,14 +1815,37 @@ input#duration {
 }
 .quizSteps ul {
   list-style-type: none;
+  padding: 0;
+  margin-bottom: 0;
 }
 .quizSteps ul:after {
   clear: both;
 }
 .quizSteps ul li {
-  width: 33%;
-  float: left;
   text-align: center;
+  padding: 0;
+}
+.quizSteps ul li a {
+  padding: 30px 0;
+  width: 33.3%;
+  float: left;
+  border: 1px solid #f3f3f3;
+  background: #e6e6e6;
+}
+.quizSteps ul li a:hover {
+  background: #f3f3f3;
+}
+.quizSteps ul li.right a {
+  background: #0aa699;
+  color: #ffffff;
+}
+.quizSteps ul li.wrong a {
+  background: #f35958;
+  color: #ffffff;
+}
+.quizSteps ul li.skip a {
+  background: #0090d9;
+  color: #ffffff;
 }
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
@@ -1992,6 +2021,7 @@ textarea.error,
 .page-content {
   min-height: 0;
   overflow-x: hidden;
+  padding-bottom: 80px;
 }
 .mainLogo {
   background-size: 80%;
