take quiz markup and styles

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -44,8 +44,8 @@
 	//border: 1px solid #505458;
 	background: @color-white;
 	//position: absolute;
-	left: 260px;
-	top: 0;
+	// left: 260px;
+	// top: 0;
 	max-width: 760px;
 	margin: 0 auto;
 	min-height: 500px !important;
