--- a/HTML/assets/less/training.less
+++ b/HTML/assets/less/training.less
@@ -19,7 +19,15 @@ h4.modName{
 }
 
 h3.time{
-	line-height: 20px
+	line-height: 20px;
+}
+
+.closeEval{
+	cursor: pointer;
+}
+
+.parameters:focus{
+	outline: none;
 }
 
 .studentList{
@@ -107,8 +115,6 @@ h3.time{
 			-moz-border-radius: 100px 100px 100px 100px;
 		}
 	}
-
-	
 
 }
 
