--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -33,10 +33,14 @@
 	max-width: 760px;
 }
 
+.timerBox{
+	float: left;
+}
 
 .timerBox, .quizProgress{
-	width: 250px;
+	width: 235px;
 	background: @color-white;
+	margin: 0 1.5%;
 }
 
 .quizSteps{
@@ -44,9 +48,6 @@
 		list-style-type: none;
 		padding: 0;
 		margin-bottom: 0;
-		&:after{
-			clear: both;
-		}
 		li{
 			text-align: center;
 			padding: 0;
@@ -54,38 +55,149 @@
 				padding: 30px 0;
 				width: 33.3%;
 				float: left;
+				position: relative;
 				border: 1px solid @preview-grey;
 				background: darken(@preview-grey, 5%);
+				font-size: 24px;
 				&:hover{
 					background: @preview-grey;
+				}
+				&:before{
+					position: absolute;
+					font-family: 'FontAwesome';
+					font-size: 20px;
+					font-weight: normal;
 				}
 			}
 			&.right{
 				a{
 					background: @color-success;
 					color: @color-white;
+					&:hover{
+						background: darken(@color-success, 10%);
+					}
+					&:before{
+						content: "\f00c";
+						bottom: 6px;
+						right: 6px;
+					}
 				}
 			}
 			&.wrong{
 				a{
 					background: @color-danger;
 					color: @color-white;
-					// &:after{
-					// 	content: "\f04e";
-					// 	font-family: FontAwesome;
-					// 	display: inline-block;
-					// }
+					&:hover{
+						background: darken(@color-danger, 10%);
+					}
+					&:before{
+						content: "\f00d";
+						bottom: 6px;
+						right: 6px;
+					}
 				}
 			}
 			&.skip{
 				a{
 					background: @color-info;
 					color: @color-white;
+					&:hover{
+						background: darken(@color-info, 10%);
+					}
+					&:before{
+						content: "\f021";
+						bottom: 6px;
+						right: 8px;
+						font-size: 18px;
+					}
 				}
 			}
+			&.current{
+				a{
+					box-shadow: inset 0 0 0 10px darken(@preview-grey, 20%);
+					&:before{
+						color: darken(@preview-grey, 20%);
+						font-size: 28px;
+						content: "\f0d8";
+						bottom: 4px;
+						left: 40%;
+					}
+				}
+			} 
 		}
 	}
 	
+}
+
+.customButtons{
+	padding: 15px 15px 20px;
+	span{
+		cursor: pointer;
+		font-size: 24px;
+	}
+	.jp-disabled{
+		opacity: 0.5;
+	}
+}
+
+.holder {
+	margin: 0 auto;
+	text-align: center;
+	line-height: 18px;
+	a {
+		background-color: @body-bg;
+		// border-radius: 50%;
+		cursor: pointer;
+		display: inline-block;
+		margin: 0 6px;
+		padding: 5px 15px;
+		&:hover {
+			background-color: @body-bg;
+		}
+	}
+	a.jp-current {
+		background-color: @color-info;
+		&:hover {
+			background-color: @color-info;
+		}
+	}
+	a.jp-disabled {
+		background-color: @body-bg;
+		&:hover {
+			background-color: darken(@body-bg, 10%);
+		}
+	}
+}
+
+@media (min-width: 1020px) and (max-width:1295px){
+	.timerBox, .quizProgress{
+		margin: 0;
+		// float: right;
+		right: 0;
+		position: absolute;
+	}
+	.quizProgress{
+		top: 168px;
+	}
+	.quizContent{
+		#myCanvas{
+			margin: 0;
+		}
+	}
+	.quizActions{
+		margin: 0;
+	}
+	.sidebarContainer{
+		position: relative;
+	}
+}
+
+@media (max-width:1019px){
+	.sidebarContainer{
+		position: absolute;
+		bottom: 0;
+		z-index: 999;
+	}
 }
 
 
