--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -7,10 +7,19 @@
                       <div class="col-sm-12">
                         <h3 class="semi-bold text-center">Data Sync</h3>
 
-                        <div class="row">
+                        <div id="totalRecords" class="row">
                           <div class="col-sm-12  m-b-10">
                             <div class="">
                               <h5 id="totalRecordsToBeSynced" class="m-t-10 bold text-center text-error">Records to be synced</h5>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- div to display last download time-->
+                        <div id="lastDownload" class="row">
+                          <div class="col-sm-12  m-b-10">
+                            <div class="">
+                              <h5 id="lastDownloadTimeStamp" class="m-t-10 bold text-center text-error">
+                              </h5>
                             </div>
                           </div>
                         </div>
