--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -180,6 +180,13 @@
   background: #d0d0d0;
   border: none;
 }
+.createParameters {
+  background: #ffffff;
+  max-width: 760px;
+  margin: 0 auto;
+  padding: 15px 10px;
+  margin-top: 30px;
+}
 #toolbox {
   width: 220px;
   background: #f3f3f3;
