--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -60,6 +60,14 @@
 	}
 }
 
+.createParameters{
+	background: @color-white;
+	max-width: 760px;
+	margin: 0 auto;
+	padding: 15px 10px;
+	margin-top: 30px;
+}
+
 #toolbox{
 	width: 220px;
 	background: @preview-grey;
