--- a/HTML/assets/less/modules/form_elements.less
+++ b/HTML/assets/less/modules/form_elements.less
@@ -229,6 +229,9 @@ textarea[class*="span"] {
     line-height: 36px !important;
     padding: 22px 8px !important;
 }
+.w100{
+    width: 100%;
+}
 .radio, .checkbox {
     margin-bottom: 0;
     margin-top: 0;
