--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/edit-group/content-selection/templates/content-selection.html
@@ -1,74 +1,60 @@
 <div class="grid-title no-border">
-	<h4 class="">Content <span class="semi-bold">Selection</span></h4>
-	<div class="tools">
-		<a href="javascript:;" class="collapse"></a>
-	</div>
+    <h4 class="">Content <span class="semi-bold">Selection</span></h4>
+    <div class="tools">
+        <a href="javascript:;" class="collapse"></a>
+    </div>
 </div>
 <div class="grid-body no-border contentSelect" style="overflow: hidden; display: block;">
-	<div class="row">
-		<div class="col-xs-11">
-			<div class="filters">
-				<div class="table-tools-actions">
-					<!--{{#tableData.filters}}
-						<select>
-							{{#values}}
-								<option value="one">{{.}}</option>
-							{{/values}}
-						</select>
-					{{/tableData.filters}}-->
-					
-						<select class="textbook-filter m-r-5" id="textbooks-filter" style="width:200px">
-							<option value="">Select Textbooks</option>
-							{{#textbooksFilter}}
-								<option value="{{id}}">{{name}}</option>
-							{{/textbooksFilter}}
-						</select>
-						<select class="textbook-filter" id="chapters-filter" style="width:150px">
-								<option value="">Select Chapters</option>
-						</select>
-						<select class="textbook-filter" id="sections-filter" style="width:150px">
-								<option value="">Select Sections</option>
-						</select>
-						<select class="textbook-filter" id="subsections-filter" style="width:200px">
-								<option value="">Select Sub Sections</option>
-						</select>
-                        <select class="content-type-filter" id="content-type-filter" style="width:150px">
-                            <option value="">All</option>
-                            <option value="teacher_question">Teacher Question</option>
-                            <option value="content_piece">Content Piece</option>
-                        </select>
-				</div>
-			</div>
-		</div>
-		<div class="col-xs-1"></div>
-		<div class="clearfix"></div>
-		<div class="col-sm-12"></div>
-	</div>
-	<div class="row">
-		<div class="col-lg-12">
-			<h4><span class="semi-bold">All</span> Questions</h4>
-			<table class="table table-hover table-condensed table-fixed-layout table-bordered" id="dataContentTable">
-				<thead>
-				  <tr>
-				  	{{#tableData}}
-				  		{{#selectbox}}
-					  		<th style="width:4%"><div id="check_all_div" class="checkbox check-default" style="margin-right:auto;margin-left:auto;">
-								<input id="check_all" type="checkbox">
-								<label for="check_all"></label>
-							  </div>
-							</th>
-						{{/selectbox}}
-				  		{{#data}}
-							<th>{{label}}</th>
-						{{/data}}
-					{{/tableData}}
-				  </tr>
-				</thead>
-				<tbody>
-				</tbody>
-		  	</table>
-			
-		</div>
-	</div>
-	<button type="button" class="btn btn-success btn-cons2 right m-t-20" id="add-content-pieces"> <i class="fa fa-plus"></i> Add</button>
+    <div class="row">
+        <div class="col-xs-11">
+            <div class="filters">
+                <div class="table-tools-actions">
+                    <span id="textbook-filters"></span>
+                    <select class="content-type-filter" id="content-type-filter" style="width:150px">
+                        <option value="">All</option>
+                        <option value="teacher_question">Teacher Question</option>
+                        <option value="content_piece">Content Piece</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-1"></div>
+        <div class="clearfix"></div>
+        <div class="col-sm-12"></div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <h4><span class="semi-bold">All</span> Questions</h4>
+            <table class="table table-hover table-condensed table-fixed-layout table-bordered" id="dataContentTable">
+                <thead>
+                <tr>
+                    <th style="width:4%"><div id="check_all_div" class="checkbox check-default" style="margin-right:auto;margin-left:auto;">
+                        <input id="check_all" type="checkbox">
+                        <label for="check_all"></label>
+                    </div>
+                    </th>
+                    <th>Question</th>
+                    <th>Author</th>
+                    <th>Last Modified</th>
+                </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+
+            <div id="pager" class="pager">
+                <i class="fa fa-chevron-left prev"></i>
+                <span style="padding:0 15px"  class="pagedisplay"></span>
+                <i class="fa fa-chevron-right next"></i>
+                <select class="pagesize">
+                    <option selected value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="30">30</option>
+                    <option value="40">40</option>
+                    <option value="50">50</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <button type="button" class="btn btn-success btn-cons2 right m-t-20" id="add-content-pieces"> <i class="fa fa-plus"></i> Add</button>
 </div>
