--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -6,21 +6,7 @@
         <div class="col-xs-12">
             <div class="filters">
                 <div class="table-tools-actions">
-                    <select class="textbook-filter" id="textbooks-filter" style="width:150px">
-                        <option value="">All Textbooks</option>
-                        {{#textbooksFilter}}
-                        <option value="{{id}}">{{name}}</option>
-                        {{/textbooksFilter}}
-                    </select>
-                    <select class="textbook-filter" id="chapters-filter" style="width:150px">
-                        <option value="">All Chapters</option>
-                    </select>
-                    <select class="textbook-filter" id="sections-filter" style="width:150px">
-                        <option value="">All Sections</option>
-                    </select>
-                    <select class="textbook-filter" id="subsections-filter" style="width:200px">
-                        <option value="">All Sub Sections</option>
-                    </select>
+                    <span id="textbook-filters"></span>
                     <select class="content-type-filter" id="content-type-filter" style="width:200px">
                         <option value="">All</option>
                         <option value="teacher_question">Teacher Question</option>
