--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -24,6 +24,15 @@
 	font-size: 25px;
 }
 
+.practiceNote{
+	position: fixed;
+	width: 100%;
+	z-index: 2;
+	&+div{
+		padding-top: 80px;
+	}
+}
+
 .quizTimer {
 	//max-width: 190px;
 	margin: 0 auto 0;
@@ -41,6 +50,10 @@
 	width: 235px;
 	background: @color-white;
 	margin: 0 1.5%;
+}
+
+.quizProgress{
+	float: right;
 }
 
 .quizSteps{
@@ -114,9 +127,9 @@
 			}
 			&.current{
 				a{
-					box-shadow: inset 0 0 0 10px darken(@preview-grey, 20%);
+					box-shadow: inset 0 0 0 10px darken(@preview-grey, 30%);
 					&:before{
-						color: darken(@preview-grey, 20%);
+						color: darken(@preview-grey, 30%);
 						font-size: 28px;
 						content: "\f0d8";
 						bottom: 4px;
@@ -176,8 +189,8 @@
 		right: 0;
 		position: absolute;
 	}
-	.quizProgress{
-		top: 168px;
+	.timerBox{
+		top: 420px;
 	}
 	.quizContent{
 		#myCanvas{
@@ -190,6 +203,9 @@
 	.sidebarContainer{
 		position: relative;
 	}
+	.qstnInfo{
+		margin-top: 100px;
+	}
 }
 
 @media (max-width:1019px){
@@ -197,6 +213,22 @@
 		position: absolute;
 		bottom: 0;
 		z-index: 999;
+		width: 100%;
+		.timerBox{
+			float: left;
+			width: 35%;
+			margin: 0;
+		}
+
+		.quizProgress {
+			float: left;
+			width: 65%;
+			margin: 0;
+
+			.quizSteps ul li a{
+				width: 15%;
+			}
+		}
 	}
 }
 
