--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -48,7 +48,8 @@
 
 .timerBox, .quizProgress{
 	width: 235px;
-	background: @color-white;
+	// background: @color-white;
+	background: darken(@preview-grey, 15%);
 	margin: 0 1.5%;
 }
 
