--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -27,7 +27,6 @@
                               <div style="display:none" class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated bounceIn"><span class="fa-exclamation-trianglea fa-exclamation-triangle"></span>&nbsp;&nbsp;No Internet Connection
                               </div>
 
-                              <!-- <div id="syncProgress" data-percentage="0%" style="width: 45%;" class="progress-bar progress-bar-success"></div> -->
                             </div>
                           </div>
                         </div>
@@ -49,6 +48,10 @@
                               <h5 id="syncMediaSuccess" class="m-t-5 semi-bold text-center text-success" style="display:none">Success</h5>
                               
                               <h5 id="syncMediaError" class="m-t-5 semi-bold text-center text-error" style="display:none">Error</h5>
+
+                              <div id="syncMediaProgress" style="display:none" class="progress progress-striped active progress-small h-center m-t-5">
+                                <div id="mediaProgressUpdate" data-percentage="0%" style="width: 0%;" class="progress-bar progress-bar-success"></div>
+                              </div>
                               
                             </div>
                           </div>
