grading parameter create

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -56,6 +56,7 @@
                         <option value="">--select question type--</option>
                         <option value="chorus">Chorus</option>
                         <option value="individual">Individual</option>
+                        <option value="multiple_eval">Multiple Evaluation</option>
                     </select>
                 </div>
                 <div class="col-sm-4">
